# ppp2025

./: .gitignore
task0/: mpi-example  mpi-example.c  openmp-example  openmp-example.c
task0/bcast/: CMakeLists.txt
task0/bcast/src/: CMakeLists.txt  bcast.c
task1/colortemp/: CMakeLists.txt  for_llm.txt
task1/colortemp/include/ppp/: ppp.h
task1/colortemp/src/: CMakeLists.txt
task1/colortemp/src/colortemp/: CMakeLists.txt  colortemp.c  main.c  parallel.c  parallel.h  single.c
task1/colortemp/src/invert_pgm/: CMakeLists.txt  invert_pgm.c  invert_pgm_mpi.c
task1/colortemp/src/ppp_pnm/: ppp_pnm.c
task2/src/: CMakeLists.txt
task2/src/pnmdiff/: pnmdiff.c
task2/src/vcd/: parallel.c  single.c
task2/vcd/: CMakeLists.txt
task2/vcd/include/ppp/: ppp.h
task2/vcd/include/ppp_pnm/: ppp_pnm.h
task2/vcd/src/pnmdiff/: CMakeLists.txt
task2/vcd/src/ppp_pnm/: CMakeLists.txt  ppp_pnm.c
task2/vcd/src/vcd/: CMakeLists.txt  claude_readme.md  main.c  parallel.c
